--- a/src/app/shared/components/delete-dialog/delete-dialog.component.html
+++ b/src/app/shared/components/delete-dialog/delete-dialog.component.html
@@ -1,22 +1,16 @@
-<h1 mat-dialog-title>{{'DIALOG.SAVE.TITLE' | translate}}</h1>
+<h1 mat-dialog-title *ngIf="dialogModel.showAccept && dialogModel.showCancel">{{'DIALOG.SAVE.TITLE' | translate}}</h1>
+<h1 mat-dialog-title *ngIf="dialogModel.showOk">{{dialogModel.infoTitle | translate}}</h1>
 <div mat-dialog-content>
-    {{dialogModel.message}}
+    {{dialogModel.message | translate}}
 </div>
-<div mat-dialog-actions>
-    <button
-        *ngIf="dialogModel.showCancel"  
-        click="close()"
-        mat-button 
-        mat-dialog-close 
-        class="btn btn-primary ml-2">
-            {{'DIALOG.CLOSE' | translate}}
+<div mat-dialog-actions class="d-flex flex-row-reverse">
+    <button *ngIf="dialogModel.showCancel" click="close()" mat-dialog-close class="btn btn-primary ml-2">
+        {{'DIALOG.CLOSE' | translate}}
     </button>
-    <button 
-        *ngIf="dialogModel.showAccept" 
-        [mat-dialog-close]="true" 
-        mat-button
-        mat-dialog-close 
-        class="btn btn-secondary ml-2">
-            {{'DIALOG.DIALOG-CONFIRM' | translate}}
+    <button *ngIf="dialogModel.showAccept" [mat-dialog-close]="true" mat-dialog-close class="btn btn-secondary ml-2">
+        {{'DIALOG.DIALOG-CONFIRM' | translate}}
+    </button>
+    <button *ngIf="dialogModel.showOk" click="close()" mat-dialog-close class="btn btn-primary ml-2">
+        {{'DIALOG.OK' | translate}}
     </button>
 </div>
