--- a/src/app/profiles/device-profiles/device-profiles-edit/device-profiles-edit.component.html
+++ b/src/app/profiles/device-profiles/device-profiles-edit/device-profiles-edit.component.html
@@ -9,6 +9,9 @@
         <strong>{{ 'PROFILES.DEVICE_PROFILE.UPDATED' | translate }}</strong>{{deviceProfileData.updatedAt | dkTime}}
         <span *ngIf="deviceProfileData.updatedByName">{{deviceProfileData.updatedByName | createdUpdatedBy}}</span>
     </p>
+    <p><strong
+            *ngIf="deviceProfile.internalOrganizationName">{{ 'PROFILES.DEVICE_PROFILE.ORGANIZATION' | translate }}</strong>{{deviceProfile.internalOrganizationName}}
+    </p>
 </div>
 <form (ngSubmit)="onSubmit()" class="os2-form mt-3 px-md-5 py-md-4">
     <div *ngIf="errorMessages" class="error-messages p-3">
