--- a/src/app/gateway/gateway-table/gateway-table.component.html
+++ b/src/app/gateway/gateway-table/gateway-table.component.html
@@ -8,7 +8,7 @@
   <div class="loading-shade" *ngIf="isLoadingResults">
     <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
   </div>
-  <table mat-table [dataSource]="dataSource" matSort matSortActive="name" matSortDirection="asc" matSortDisableClear>
+  <table mat-table [dataSource]="data" matSort matSortActive="name" matSortDirection="asc" matSortDisableClear>
 
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
@@ -21,14 +21,14 @@
       </td>
     </ng-container>
 
-    <ng-container matColumnDef="gateway-id">
+    <ng-container matColumnDef="gatewayId">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'LORA-GATEWAY-TABLE.GATEWAYID' | translate }}</th>
       <td mat-cell *matCellDef="let gateway">
         {{ gateway.gatewayId }}
       </td>
     </ng-container>
 
-    <ng-container matColumnDef="internalOrganizationName">
+    <ng-container matColumnDef="organizationName">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'LORA-GATEWAY-TABLE.ORGANIZATION' | translate }}
       </th>
       <td mat-cell *matCellDef="let gateway">
@@ -51,7 +51,7 @@
     </ng-container>
 
     <ng-container matColumnDef="tags">
-      <th mat-header-cell *matHeaderCellDef>{{ 'LORA-GATEWAY-TABLE.TAGS' | translate }}</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'LORA-GATEWAY-TABLE.TAGS' | translate }}</th>
       <td mat-cell *matCellDef="let gateway">
         {{gateway.tagsString}}
       </td>
@@ -72,7 +72,7 @@
       </td>
     </ng-container>
 
-    <ng-container matColumnDef="last-seen">
+    <ng-container matColumnDef="lastSeenAt">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         {{ 'LORA-GATEWAY-TABLE.LAST-SEEN-AT' | translate }}
       </th>
