--- a/src/app/gateway/gateway-table/gateway-table.component.html
+++ b/src/app/gateway/gateway-table/gateway-table.component.html
@@ -50,6 +50,69 @@
       </td>
     </ng-container>
 
+    <ng-container matColumnDef="placement">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'LORA-GATEWAY-TABLE.PLACEMENT' | translate }}</th>
+      <td mat-cell *matCellDef="let gateway">
+        {{ gateway.placement ? ('GATEWAY.PLACEMENT.' + gateway.placement | translate) : '' }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="modelName">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'LORA-GATEWAY-TABLE.MODEL-NAME' | translate }}</th>
+      <td mat-cell *matCellDef="let gateway">
+        {{ gateway.modelName }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="antennaType">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'LORA-GATEWAY-TABLE.ANTENNA-TYPE' | translate }}</th>
+      <td mat-cell *matCellDef="let gateway">
+        {{ gateway.antennaType }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="status">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'LORA-GATEWAY-TABLE.STATUS' | translate }}</th>
+      <td mat-cell *matCellDef="let gateway">
+        {{ gateway.status ? ("GATEWAY.STATUS." + gateway.status | translate) : '' }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="gatewayResponsibleName">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'LORA-GATEWAY-TABLE.RESPONSIBLE-NAME' | translate }}</th>
+      <td mat-cell *matCellDef="let gateway">
+        {{ gateway.gatewayResponsibleName }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="gatewayResponsibleEmail">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'LORA-GATEWAY-TABLE.RESPONSIBLE-EMAIL' | translate }}</th>
+      <td mat-cell *matCellDef="let gateway">
+        {{ gateway.gatewayResponsibleEmail }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="gatewayResponsiblePhoneNumber">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'LORA-GATEWAY-TABLE.RESPONSIBLE-PHONE-NUMBER' | translate }}</th>
+      <td mat-cell *matCellDef="let gateway">
+        {{ gateway.gatewayResponsiblePhoneNumber }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="operationalResponsibleName">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'LORA-GATEWAY-TABLE.OPERATIONAL-NAME' | translate }}</th>
+      <td mat-cell *matCellDef="let gateway">
+        {{ gateway.operationalResponsibleName }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="operationalResponsibleEmail">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'LORA-GATEWAY-TABLE.OPERATIONAL-EMAIL' | translate }}</th>
+      <td mat-cell *matCellDef="let gateway">
+        {{ gateway.operationalResponsibleEmail }}
+      </td>
+    </ng-container>
+
     <ng-container matColumnDef="tags">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'LORA-GATEWAY-TABLE.TAGS' | translate }}</th>
       <td mat-cell *matCellDef="let gateway">
@@ -81,7 +144,7 @@
       </td>
     </ng-container>
 
-    <ng-container matColumnDef="status">
+    <ng-container matColumnDef="onlineStatus">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         {{ 'LORA-GATEWAY-TABLE.STATUS' | translate }}
       </th>
