--- a/src/app/applications/application-detail/application-detail.component.html
+++ b/src/app/applications/application-detail/application-detail.component.html
@@ -41,7 +41,7 @@
             </div>
             <div class="col-md-4 d-flex align-items-stretch">
                 <div class="jumbotron jumbotron--m-left jumbotron--full-width">
-                    <div class="thirty-height" *ngIf="devs && gateways">
+                    <div class="thirty-height" *ngIf="devices && gateways">
                         <app-map [coordinateList]="coordinateList" [isFromApplication]="true"></app-map>
                     </div>
                 </div>
